--- a/index.html
+++ b/index.html
@@ -2,89 +2,70 @@
 <html lang="uk">
 <head>
 <meta charset="UTF-8">
-<title>Calc Money</title>
+<title>Счетчик гривен</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#ffffff">
+
 <style>
   body {
-    margin: 0;
     font-family: Arial, sans-serif;
-    background: url('background.jpg') no-repeat center center fixed;
-    background-size: cover;
-    color: white;
+    max-width: 300px;
+    margin: auto;
+    padding: 20px;
   }
-  h1 {
-    text-align: center;
-    font-size: 32px;
-    font-weight: bold;
-    margin: 20px 0;
-    text-shadow: 0px 0px 8px #00ffcc;
-  }
-  .container {
+  label {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 0 20px;
+    justify-content: space-between;
+    margin-bottom: 10px;
   }
-  .note {
-    display: flex;
-    align-items: center;
-    margin: 10px 0;
-  }
-  .note img {
-    width: 100px;
-    border-radius: 5px;
-    margin-right: 15px;
-  }
-  .note input {
+  input {
     width: 60px;
-    padding: 5px;
-    font-size: 16px;
     text-align: right;
-    border-radius: 5px;
-    border: none;
   }
   .total {
-    text-align: center;
-    font-size: 26px;
+    font-size: 20px;
     font-weight: bold;
-    margin: 30px 0;
-    padding: 10px;
-    background: rgba(0,0,0,0.6);
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px #00ffcc;
+    margin-top: 20px;
+    text-align: center;
   }
 </style>
 </head>
 <body>
 
-<h1>CALC MONEY</h1>
+<h2>Счетчик гривен</h2>
 
-<div class="container">
-  <div class="note"><img src="1000.jpg"><input type="number" id="c1000" value="0" min="0"></div>
-  <div class="note"><img src="500.jpg"><input type="number" id="c500" value="0" min="0"></div>
-  <div class="note"><img src="200.jpg"><input type="number" id="c200" value="0" min="0"></div>
-  <div class="note"><img src="100.jpg"><input type="number" id="c100" value="0" min="0"></div>
-  <div class="note"><img src="50.jpg"><input type="number" id="c50" value="0" min="0"></div>
-  <div class="note"><img src="20.jpg"><input type="number" id="c20" value="0" min="0"></div>
-</div>
+<label>10 грн: <input type="number" id="c10" value="0" min="0"></label>
+<label>20 грн: <input type="number" id="c20" value="0" min="0"></label>
+<label>50 грн: <input type="number" id="c50" value="0" min="0"></label>
+<label>100 грн: <input type="number" id="c100" value="0" min="0"></label>
+<label>200 грн: <input type="number" id="c200" value="0" min="0"></label>
+<label>500 грн: <input type="number" id="c500" value="0" min="0"></label>
 
 <div class="total">Сумма: <span id="total">0</span> грн</div>
 
 <script>
 function updateTotal() {
   let sum = 
-    (parseInt(c1000.value) || 0) * 1000 +
-    (parseInt(c500.value)  || 0) * 500 +
-    (parseInt(c200.value)  || 0) * 200 +
-    (parseInt(c100.value)  || 0) * 100 +
-    (parseInt(c50.value)   || 0) * 50 +
-    (parseInt(c20.value)   || 0) * 20;
+    (parseInt(c10.value)  || 0) * 10 +
+    (parseInt(c20.value)  || 0) * 20 +
+    (parseInt(c50.value)  || 0) * 50 +
+    (parseInt(c100.value) || 0) * 100 +
+    (parseInt(c200.value) || 0) * 200 +
+    (parseInt(c500.value) || 0) * 500;
   
   total.textContent = sum;
 }
+
 document.querySelectorAll("input").forEach(el => {
   el.addEventListener("input", updateTotal);
 });
+</script>
+
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('sw.js');
+  }
 </script>
 
 </body>
